--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -5,6 +5,9 @@
 
   --font-family: 'Source Sans 3', sans-serif;
   --font-family-heading: 'Montserrat', sans-serif;
+
+  --highlight-color: #3894b3;
+  --highlight-color-light: #a5e3f7;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: var(--font-family-heading);
