--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -8,6 +8,10 @@
   --highlight-color-light: #a5e3f7;
 }
 
+#app {
+  --navbar-c-bg: transparent;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif !important;
 }
